core/tests/integration/fail/contracts/nullable.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::BlameError'

3 | std.contract.Nullable String

